fix the button disappearing from the nag on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -837,15 +837,17 @@ section #title .credits.right {
   }
 }
 @media print, screen and (max-width: 480px) {
+  /*
   #header {
     margin-top: -20px;
   }
+  nav {
+    display: none;
+  }
+  */
 
   section {
     margin-top: 40px;
   }
 
-  nav {
-    display: none;
-  }
 }
